simple instructions to get bot started.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shannons Demon
-description: return randomness into profit
+title: Shannon's Demon
+description: create profit out of randomness
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
