--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shannon's Demon
-description: create profit out of randomness
+description: Create profit out of randomness.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
